--- a/ShopWebSite/Views/Home/Detail.cshtml
+++ b/ShopWebSite/Views/Home/Detail.cshtml
@@ -24,16 +24,28 @@
                 <div id="product-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner bg-light">
 
-                        <div class="carousel-item active">
-                            <img class="w-100 h-100" src="~/img/@Model.Images[0].Name" alt="Image">
-                        </div>
-                        @for (int i = 1; i < Model.Images.Count; i++)
+                        @if (@Model.Images.Count>0)
                         {
-                            <div class="carousel-item">
-                                <img class="w-100 h-100" src="~/img/@Model.Images[i].Name" alt="Image">
+                            <div class="carousel-item active">
+                                <img class="w-100 h-100" src="~/img/@Model.Images[0].Name" alt="Image">
                             </div>
+                            @for (int i = 1; i < Model.Images.Count; i++)
+                            {
+                                <div class="carousel-item">
+                                    <img class="w-100 h-100" src="~/img/@Model.Images[i].Name" alt="Image">
+                                </div>
                             
+                            }
                         }
+
+                        else{
+                        <div class="carousel-item active">
+                            <img class="w-100 h-100" src="~/img/noimage.jpg" alt="Image">
+                        </div>
+                        }
+
+
+
                     </div>
                     <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
                         <i class="fa fa-2x fa-angle-left text-dark"></i>
