--- a/ShopWebSite/Views/Home/Index.cshtml
+++ b/ShopWebSite/Views/Home/Index.cshtml
@@ -8,34 +8,54 @@
         <div class="col-lg-8">
             <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#header-carousel" data-slide-to="1"></li>
-                    <li data-target="#header-carousel" data-slide-to="2"></li>
+
+                    @if (ViewBag.carousels.Count>0)
+                    {
+                        <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
+                        @for (var i = 1; i < ViewBag.carousels.Count; i++)
+                        {
+                            <li data-target="#header-carousel" data-slide-to="@i"></li>
+                        }
+                    }
+
+                    
+                    
+                    
+                   
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item position-relative active" style="height: 430px;">
-                        <img class="position-absolute w-100 h-100" src="img/carousel-1.jpg" style="object-fit: cover;">
-                        <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                            <div class="p-3" style="max-width: 700px;">
-                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">@ViewBag.carousels[0].Title</h1>
-                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                    @if (ViewBag.carousels.Count > 0 && !String.IsNullOrEmpty(ViewBag.carousels[0].Img) && !String.IsNullOrWhiteSpace(ViewBag.carousels[0].Img)){
+
+                        <div class="carousel-item position-relative active" style="height: 430px;">
+                            <img class="position-absolute w-100 h-100" src="~/img/@ViewBag.carousels[0].Img" style="object-fit: cover;">
+                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                <div class="p-3" style="max-width: 700px;">
+                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">@ViewBag.carousels[0].Title</h1>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">@ViewBag.carousels[0].Description</p>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    @for (int i = 1; i < ViewBag.carousels.Count; i++)
-                    {
+                        @for (int i = 1; i < ViewBag.carousels.Count; i++)
+                        {
                         
-                        <div class="carousel-item position-relative" style="height: 430px;">
-                        <img class="position-absolute w-100 h-100" src="img/@ViewBag.carousels[i].Img" style="object-fit: cover;">
-                        <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                            <div class="p-3" style="max-width: 700px;">
-                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">@ViewBag.carousels[i].Title</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">@ViewBag.carousels[i].Description</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                            <div class="carousel-item position-relative" style="height: 430px;">
+                            <img class="position-absolute w-100 h-100" src="~/img/@ViewBag.carousels[i].Img" style="object-fit: cover;">
+                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                <div class="p-3" style="max-width: 700px;">
+                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">@ViewBag.carousels[i].Title</h1>
+                                        <p class="mx-md-5 px-5 animate__animated animate__bounceIn">@ViewBag.carousels[i].Description</p>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                        }
+                    }
+
+                    else{
+                        <div class="carousel-item position-relative active" style="height: 430px;">
+                            <img class="position-absolute w-100 h-100" src="~/img/noimage.jpg" style="object-fit: cover;">
+                        </div>
                     }
                     
                     
